--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 }
 
 body {
-    background-image: linear-gradient(-300deg, #000000, #000000, #272727);
+    background: rgb(36,0,9);
+    background: linear-gradient(90deg, rgba(36,0,9,1) 0%, rgba(2,5,8,1) 0%, rgba(3,6,8,1) 81%, rgba(5,6,6,1) 100%);
     background-attachment: fixed;
     background-repeat: no-repeat;
     /* background-color: #1C1C1C; */
@@ -37,6 +38,7 @@ header {
 }
 
 .foto-perfil{
+    margin: 5px 0  5px 0;
     width: 250px;
     height: 250px;
     position: relative;
@@ -50,7 +52,8 @@ header {
     text-align: center;
     margin-top: 20px;
     position: relative;
-    background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    background: rgb(36,0,9);
+    background: linear-gradient(90deg, rgba(36,0,9,1) 0%, rgba(121,9,9,1) 0%, rgba(187,39,54,1) 78%, rgba(255,0,0,1) 100%);
     animation: instagramAnimation 2s ease-in-out;
 }
 
@@ -101,7 +104,8 @@ a {
     text-align: center;
     margin-top: 20px;
     position: relative;
-    background: linear-gradient( 90deg, rgba(111, 139, 231, 1) 0%, rgba(47, 41, 157, 1) 100%);
+    background: rgb(36,0,9);
+    background: linear-gradient(90deg, rgba(36,0,9,1) 0%, rgba(9,73,121,1) 0%, rgba(39,74,187,1) 78%, rgba(0,185,255,1) 100%);
     animation: linkedinAnimation 2s ease-in-out;
 }
 
